[package]
name = "path-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
regex-cursor = "0.1.4"
ropey = "1.6.1"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0"
tracing-subscriber = "0.3.18"
